<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Volumenes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tooltipText="Volumenes"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/btnCubo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="116dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cubo"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/lblCirculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="55dp"
        android:text="@string/lblEsfera"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toEndOf="@+id/btnEsfera"
        app:layout_constraintTop_toBottomOf="@+id/lblCubo" />

    <TextView
        android:id="@+id/lblCilindro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="55dp"
        android:text="@string/lblCilindro"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toEndOf="@+id/btnCilindro"
        app:layout_constraintTop_toBottomOf="@+id/lblCirculo" />

    <ImageButton
        android:id="@+id/btnCilindro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEsfera"
        app:layout_constraintVertical_bias="0.093"
        app:srcCompat="@drawable/cilindro"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/lblCubo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="55dp"
        android:text="@string/lblCubo"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnCubo"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnEsfera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCubo"
        app:srcCompat="@drawable/circulo"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>